# financeapi

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/routes/: accounts.py  categories.py  imports.py  insights.py  rules.py  transactions.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  account.py  audit_log.py  category.py  category_rule.py  common.py  import_job.py  merchant.py  transaction.py
app/schemas/: account.py  category.py  imports.py  insights.py  merchant.py  rule.py  transaction.py
app/services/: audit.py  csv_import.py  dedup.py  money.py  normalization.py  rules_engine.py
public/: index.html
tests/: test_money_parse.py  test_normalization_and_dedup.py  test_rules_engine.py
